# spectre-protocol-ckb

./: .gitignore  README.md  spectre.config.json
circuits/: Nargo.toml  Prover.toml
circuits/src/: main.nr
contracts/spectre-contracts/: Cargo.toml  Makefile  README.md
contracts/spectre-contracts/.cargo/: config.toml
contracts/spectre-contracts/agent-lock/: Cargo.toml  README.md
contracts/spectre-contracts/agent-lock/.cargo-generate/: tests.rs
contracts/spectre-contracts/agent-lock/src/: main.rs
contracts/spectre-contracts/agent-type/: Cargo.toml
contracts/spectre-contracts/agent-type/src/: lib.rs  main.rs
contracts/spectre-contracts/contracts/recovery-lock/: Cargo.toml  README.md
contracts/spectre-contracts/contracts/recovery-lock/src/: main.rs
contracts/spectre-contracts/crates/spectre-types/: Cargo.toml  build.rs
contracts/spectre-contracts/crates/spectre-types/src/: lib.rs
contracts/spectre-contracts/mock/: agent_type_rotate.json
contracts/spectre-contracts/schemas/: agent-record.mol
contracts/spectre-contracts/tests/: Cargo.toml
contracts/spectre-contracts/tests/src/: tests.rs
docs/site/: index.html
relayer/: gen-keypair.mts  get-pubkey.mts  package-lock.json  package.json  tsconfig.json
relayer/src/cli/: address.ts  cancel-recovery.ts  config.ts  create.ts  deploy-recovery-lock.ts  deploy.ts  execute-recovery.ts  initiate-recovery.ts  molecule.ts  network.ts  rotate.ts
relayer/src/email/: dkim.ts  parser.ts  types.ts
relayer/src/mock/: gen_agent_type.ts
relayer/src/prover/: generateProver.ts  prover.ts  test-proof.ts  witness.ts
