[package]
name = "agent-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = "1.1"
blake2 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
