[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[features]
native-simulator = [ "ckb-testtool/native-simulator" ]

[dependencies]
ckb-testtool = "1.1"
serde_json = "1.0"
spectre-types = { path = "../crates/spectre-types" }
molecule = "0.9"
secp256k1 = { version = "0.29", features = ["alloc", "recovery", "rand-std"] }
blake2 = "0.10"
