[package]
name = "recovery-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = "1.1"
spectre-types = { path = "../../crates/spectre-types" }
blake2 = { version = "0.10", default-features = false }
secp256k1 = { version = "0.29", default-features = false, features = [
    "alloc",
    "recovery",
    "lowmemory",
] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
