[package]
name = "spectre-types"
version = "0.1.0"
edition = "2024"

[dependencies]
molecule = { version = "0.9", default-features = false }
ckb-std = "1.1"
blake2 = { version = "0.10", default-features = false }
secp256k1 = { version = "0.29", default-features = false, features = [
    "alloc",
    "recovery",
] }
[build-dependencies]
molecule-codegen = "0.9"
